[package]
name = "api"
version = "0.1.0"
authors = ["Max Strübing <mxstrbng@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared", version = "0.1.0" }
actix-web = "1.0.8"
diesel = { version = "1.4.3", features = ["postgres"] }
env_logger = "0.7.1"
futures = "0.1.29"
juniper = "0.14.0"
serde = "1.0.101"
serde_derive = "1.0.101"
serde_json = "1.0.41"
