[package]
name = "runner"
version = "0.1.0"
authors = ["Max Strübing <mxstrbng@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared", version = "0.1.0" }
chan = "0.1.23"
diesel = { version = "1.4.7", features = ["postgres", "r2d2"] }
