[package]
name = "shared"
version = "0.1.0"
authors = ["Max Strübing <mxstrbng@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cron = "0.6.0"
chrono = "0.4.10"
postgres = "0.15"
dotenv = "0.15"
diesel = { version = "1.4.3", features = ["postgres", "r2d2"] }
juniper = "0.14.2"
r2d2 = "0.8.8"
